# Yemeksepeti_tasks

./: .gitignore  README.md  pyproject.toml  task1.ipynb
