[tool.poetry]
name = "yemeksepeti"
version = "0.1.0"
description = ""
authors = ["NureddinSoltan <noorsoltan40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
ace-tools = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
